--- a/장기효/index.html
+++ b/장기효/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>계산기 과제 - 장기효</title>
+  <title>계산기 과제 - 지소라</title>
 </head>
 <body>
   과제 작성
