complete cal function

--- a/장기효/index.html
+++ b/장기효/index.html
@@ -6,8 +6,60 @@
   <title>계산기 과제 - 장기효</title>
 </head>
 <body>
-  과제 작성 
-  시작합니다.
-  시작합니다.
+  <!-- 2개의 숫자를 입력 받는 인풋 박스
+입력한 2개의 숫자를 연산하는 덧셈(+), 뺄셈(-) 기능
+계산 과정과 결과를 화면에 출력 -->
+
+  <div>
+    <div class='calHistory'></div>
+    <div class='calResult'></div>
+    <input class='txt1' type='text1'>
+    <span class='operation'></span>
+    <input class='txt2' type='text2'>
+
+    <div class='minus'> - </div>
+    <div class='plus'> + </div>
+
+    <div class='calculator'> 계산 </div>
+
+
+  </div>
+  <script>
+    // document.getElementsByName result ? 
+    document.querySelector('.calculator').addEventListener('click', calculator);
+    document.querySelector('.minus').addEventListener('click', minus);
+    document.querySelector('.plus').addEventListener('click', plus);
+
+
+    function calculator(){
+      var txt1 = document.querySelector('.txt1');
+      var txt2 = document.querySelector('.txt2');
+
+
+      var calResult = 0; 
+      var calHistory = '';
+
+      if(document.querySelector('.operation').innerHTML == '+'){
+        calResult = parseInt(txt1.value) + parseInt(txt2.value);
+        calHistory = txt1.value+''+ '+' + txt2.value+'';
+      }else if(document.querySelector('.operation').innerHTML == '-'){
+        calResult = parseInt(txt1.value) - parseInt(txt2.value);
+        calHistory = txt1.value+''+ '-' + txt2.value+'';
+      }
+
+      document.querySelector('.calHistory').innerHTML = calHistory;
+      document.querySelector('.calResult').innerHTML = calResult;
+
+
+    }
+
+    function minus(){
+      document.querySelector('.operation').innerHTML = '-';
+    }
+
+    function plus(){
+      document.querySelector('.operation').innerHTML = '+';
+    }
+  </script>
 </body>
 </html>
