--- a/장기효/index.html
+++ b/장기효/index.html
@@ -3,13 +3,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>계산기 과제 - 장기효</title>
+  <title>계산기 과제 - 윤재윤</title>
 </head>
 <body>
   <!-- 2개의 숫자를 입력 받는 인풋 박스
 입력한 2개의 숫자를 연산하는 덧셈(+), 뺄셈(-) 기능
 계산 과정과 결과를 화면에 출력 -->
 
+<!--
+  
+  ######################################################
+  ######################################################
+  ######################################################
+  아직 미완성 입니다. git 공부하다가 모르고 pull request 눌렀습니다.
+  ######################################################
+  ######################################################
+  ######################################################
+-->
   <div>
     <div class='calHistory'></div>
     <div class='calResult'></div>
