기본 기능 구현

--- a/채호경/index.html
+++ b/채호경/index.html
@@ -3,9 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
+    <title>WAP-Calculator</title>
 </head>
 <body>
-    채호경 페이지 입니다.
+    <header>
+        채호경 계산기 과제 제출
+    </header>
+    <div>
+        <input type="number" name="firstNum" autofocus>
+        <input type="number" name="secondNum">
+    </div>
+    <div class="addResult"></div>
+    <div class="subResult"></div>
+    <script src="./main.js"></script>
 </body>
 </html>
