--- a/채호경/index.html
+++ b/채호경/index.html
@@ -6,16 +6,20 @@
     <link rel="stylesheet" href="./main.css">
     <title>WAP-Calculator</title>
 </head>
+
 <body>
     <header>
-        채호경 계산기 과제 제출
+        <h2>채호경 계산기 과제 제출</h2>
     </header>
-    <div>
+    <div class="inputElements">
         <input type="number" name="firstNum" autofocus>
-        <input type="number" name="secondNum">
+        <input type="number" value="0" name="secondNum">
     </div>
-    <div class="addResult"></div>
-    <div class="subResult"></div>
+    <div class="resultElements">
+        <div class="addResult"></div>
+        <div class="subResult"></div>
+    </div>
     <script src="./main.js"></script>
 </body>
+
 </html>
