--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
     .wrapper .pad .zero {
         width: 150px;
     }
+    
+    .wrapper .pad .num,
+    .wrapper .pad .zero {
+        border: #fff;
+        background-color: #fff;
+    }
 </style>
 
 <script>
