--- a/조성욱/index.html
+++ b/조성욱/index.html
@@ -25,11 +25,11 @@
   <script>
     function calculator(op) {
       var result;
-      var number1 = document.getElementById("num1").value;
-      var number2 = document.getElementById("num2").value;
+      var number1 = parseInt(document.getElementById("num1").value);
+      var number2 = parseInt(document.getElementById("num2").value);
       var out = document.getElementById("outresult")
       if(op=='+'){
-        result = parseInt(number1) +parseInt(number2);
+        result = number1 + number2;
       }
       else if(op=='-')
       {
