Separate javascript file as calculator.js

--- a/노승헌/index.html
+++ b/노승헌/index.html
@@ -16,22 +16,6 @@
     <hr>
     <h3>Result</h3>
     <div class="result" id="result"></div>
-    <script type="text/javascript">
-        document.getElementById("btnAdd").addEventListener("click", function() {
-            var result;
-            var firstNum = document.getElementById("firstNum").value;
-            var secondNum = document.getElementById("secondNum").value
-            result = Number(firstNum) + Number(secondNum);
-            document.getElementById("result").innerText = "Add " + firstNum + " with " + secondNum + " is " + result;
-        });
-
-        document.getElementById("btnSub").addEventListener("click", function() {
-            var result;
-            var firstNum = document.getElementById("firstNum").value;
-            var secondNum = document.getElementById("secondNum").value
-            result = Number(firstNum) - Number(secondNum);
-            document.getElementById("result").innerText = "Subtract " + secondNum + " from " + firstNum + " is " + result;
-        });
-    </script>
+    <script src="calculator.js" type="text/javascript"></script>
 </body>
 </html>
